--- a/Directory.packages.props
+++ b/Directory.packages.props
@@ -15,5 +15,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
+    <PackageVersion Include="Serilog.AspNetCore" Version="7.0.0" />
   </ItemGroup>
 </Project>
