--- a/Directory.packages.props
+++ b/Directory.packages.props
@@ -3,6 +3,7 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="JetBrains.Annotations" Version="2023.2.0" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.12" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.12" />
     <PackageVersion Include="Roslynator.Analyzers" Version="4.6.0">
@@ -18,5 +19,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
     <PackageVersion Include="Serilog.AspNetCore" Version="7.0.0" />
+    <PackageVersion Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
 </Project>
