--- a/Directory.packages.props
+++ b/Directory.packages.props
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageVersion Include="FluentAssertions" Version="6.12.0" />
     <PackageVersion Include="JetBrains.Annotations" Version="2023.2.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.13" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.12" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.12" />
     <PackageVersion Include="MockQueryable.NSubstitute" Version="7.0.0" />
