Get players information from POST body. Add request validation with FluentValidation nuget.

--- a/src/BattleshipBoardGame/BattleshipBoardGame.csproj
+++ b/src/BattleshipBoardGame/BattleshipBoardGame.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" />
     <PackageReference Include="JetBrains.Annotations" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
       <PrivateAssets>all</PrivateAssets>
